// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpText render it should render 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
  min-width: 0;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(112,117,120);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
    display="flex"
  >
    <div
      className="emotion-0"
      color="colorTextWeak"
      fontSize="fontSize30"
    >
      child
    </div>
  </div>
</div>
`;

exports[`HelpText render it should render with an error icon 1`] = `
.emotion-3 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
  min-width: 0;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(226,37,37);
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-1 {
  margin: 0;
  padding: 0;
  color: rgb(226,37,37);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 0.25rem;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    display="flex"
  >
    <span
      className="emotion-0"
      color="colorTextError"
      display="block"
      size="sizeIcon20"
    >
      <svg
        aria-hidden={true}
        aria-labelledby="ErrorIcon-1"
        height="100%"
        role="img"
        viewBox="0 0 20 20"
        width="100%"
      >
        <path
          d="M11.247 2.517l6.236 6.236a1.764 1.764 0 010 2.494l-6.236 6.236a1.764 1.764 0 01-2.494 0l-6.236-6.236a1.764 1.764 0 010-2.494l6.236-6.236a1.764 1.764 0 012.494 0zM10 12a1 1 0 100 2 1 1 0 000-2zm.01-5h-.02c-.604 0-1.073.592-.978 1.244l.428 2.238c.04.296.278.518.557.518h.006c.279 0 .516-.222.557-.518l.428-2.238c.095-.652-.367-1.237-.978-1.244z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <div
      className="emotion-1"
      color="colorTextError"
      fontSize="fontSize30"
    >
      child
    </div>
  </div>
</div>
`;
